--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# TextMesh Pro files
+[Aa]ssets/TextMesh*Pro/
